--- a/stocktweets-client/public/index.html
+++ b/stocktweets-client/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="stocktweets"
+      content="StockTweets gets all the latest tweets in realtime from your favorite Stock Tickers powered by StockTwits"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <title>StockTwits</title>
+    <title>StockTweets</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
